<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/graywhite"
    android:orientation="vertical"
    tools:context=".client.view.DoctorInfoActivity" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/head_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="2dip"
        android:paddingRight="2dip" >

        <ImageView
            android:id="@+id/user_info_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:background="@drawable/head_back"
            android:clickable="true" />

        <TextView
            style="@style/detail_head_title"
            android:layout_gravity="center" />

      
    </FrameLayout>

    <ScrollView
        android:id="@+id/user_info_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15.0dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/user_info_userface"
                    android:layout_width="70dip"
                    android:layout_height="70dip"
                    android:background="@drawable/widget_dface_border"
                    android:clickable="true"
                    android:padding="3.0dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/widget_dface" />
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
					<TextView
	                    android:id="@+id/user_info_username"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="10.0dip"
	                    android:layout_marginBottom="10.0dip"
	                    android:textColor="@color/author_text"
	                    android:textSize="15.0dip" />
					 <TextView
	                    android:id="@+id/user_info_major"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="10.0dip"
	                    android:layout_marginBottom="10.0dip"
	                    android:textColor="@color/author_text"
	                    android:textSize="15.0dip" />
                </LinearLayout>
            </LinearLayout>
			<LinearLayout
                android:id="@+id/summary_ll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/table_mid_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/doc_info_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:duplicateParentState="true"
                    android:text="@string/frame_title_summary"
                    android:textColor="@color/grayslate"
                    android:textSize="15.0dip"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/chat_ll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/table_above_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:duplicateParentState="true"
                    android:text="@string/frame_title_chat"
                    android:textColor="@color/grayslate"
                    android:textSize="15.0dip"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_info_favorites"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10.0dip"
                    android:layout_weight="1"
                    android:duplicateParentState="true"
                    android:textColor="@color/author_text"
                    android:textSize="14.0dip"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15.0dip"
                    android:src="@drawable/widget_right_icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/opp_ll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/table_mid_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:duplicateParentState="true"
                    android:text="@string/frame_title_opp"
                    android:textColor="@color/grayslate"
                    android:textSize="15.0dip"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_info_followers1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10.0dip"
                    android:layout_weight="1"
                    android:duplicateParentState="true"
                    android:textColor="@color/author_text"
                    android:textSize="14.0dip"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15.0dip"
                    android:src="@drawable/widget_right_icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/adddoc_ll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/table_below_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:duplicateParentState="true"
                    android:text="@string/frame_title_adddoc"
                    android:textColor="@color/grayslate"
                    android:textSize="15.0dip"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_info_fans"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10.0dip"
                    android:layout_weight="1"
                    android:duplicateParentState="true"
                    android:textColor="@color/author_text"
                    android:textSize="14.0dip"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15.0dip"
                    android:src="@drawable/widget_right_icon" />
            </LinearLayout>

 			<LinearLayout
                android:id="@+id/deldoc_ll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/table_below_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:duplicateParentState="true"
                    android:text="@string/frame_title_deldoc"
                    android:textColor="@color/grayslate"
                    android:textSize="15.0dip"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10.0dip"
                    android:layout_weight="1"
                    android:duplicateParentState="true"
                    android:textColor="@color/author_text"
                    android:textSize="14.0dip"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15.0dip"
                    android:src="@drawable/widget_right_icon" />
            </LinearLayout>
             </LinearLayout>
    </ScrollView>

</LinearLayout>